--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Sunburst</title>
-    <link rel="stylesheet" type="text/css" href="sunburst.css">
+    <title>Birds</title>
+    <link rel="stylesheet" type="text/css" href="birds.css">
     <!-- Load d3.js and the geo projection plugin -->
     <script src="https://d3js.org/d3.v5.js"></script>
     <script src="https://d3js.org/topojson.v2.min.js"></script>
@@ -11,9 +11,7 @@
   </head>
   <body>
   <!-- Create an element where the map will take place -->
-    <h1>Sunburst Test</h1>
-    <div id="my_dataviz"></div>
-    <script type="text/javascript" src="sunburst.js"></script>
+    <script type="text/javascript" src="birds.js"></script>
     
   </body>
 </html>
