--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Sunburst</title>
+    <title>Interactive Map About Birds</title>
     <link rel="stylesheet" type="text/css" href="birds.css">
     <!-- Load d3.js and the geo projection plugin -->
     <script src="https://d3js.org/d3.v5.js"></script>
     <script src="https://d3js.org/topojson.v2.min.js"></script>
     <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+    
   </head>
   <body>
   <!-- Create an element where the map will take place -->
